@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-22T16:01:23Z",
-  "count_outdated" : 42,
-  "uniques_outdated" : 36,
+  "timestamp" : "2022-08-24T00:32:36Z",
+  "count_outdated" : 43,
+  "uniques_outdated" : 37,
   "count" : 53,
   "uniques" : 44,
   "clones" : [
-    {
-      "timestamp": "2022-08-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-12T00:00:00Z",
       "count": 6,
