@@ -1,12 +1,7 @@
 {
-  "count": 11,
-  "uniques": 8,
+  "count": 10,
+  "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2022-08-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-12T00:00:00Z",
       "count": 6,
